# Colibri_Survey

./: .gitignore  AGENTS.md  README.md  pyproject.toml
data/colibri/: SOURCE.md  tistory-3364-snapshot.md
data/glm/: SOURCE.md  notes.md
data/olmoe/: SOURCE.md  paper-olmoe-arxiv-2409.02060.txt
docs/: 00-overview.md  10-colibri-architecture.md  20-moe-streaming.md  21-mla-kv-compression.md  22-speculative-decoding.md  30-local-run-notes.md  31-engine-verification.md  40-analysis-tradeoffs.md  50-resource-requirements.md  60-applying-to-other-models.md  61-apply-gpt-oss-20b.md  62-apply-gemma4.md  70-executive-brief.md  80-olmoe-and-h100-recommendations.md  81-thinkflow-upgrade-design.md  82-gpt-oss-mxfp4-to-int4-converter.md  83-olmoe-streaming-measurement.md  84-thinkflow-swap-checklist.md  85-dual-model-crossval-resources.md  90-status-and-closeout.md  91-licensing-compliance.md  99-references.md
report/: Colibri_Survey_Report.docx  master.md  reference.docx
report/img/: 00-overview-1.mmd  10-colibri-architecture-1.mmd  20-moe-streaming-1.mmd  21-mla-kv-compression-1.mmd  22-speculative-decoding-1.mmd  40-analysis-tradeoffs-1.mmd  50-resource-requirements-1.mmd  60-applying-to-other-models-1.mmd  61-apply-gpt-oss-20b-1.mmd  62-apply-gemma4-1.mmd  70-executive-brief-1.mmd  80-olmoe-and-h100-recommendations-1.mmd  81-thinkflow-upgrade-design-1.mmd  82-gpt-oss-mxfp4-to-int4-converter-1.mmd  83-olmoe-streaming-measurement-1.mmd  (+2 more)
scripts/: build_report.py  make_reference_docx.py  mxfp4_to_int4_prototype.py  olmoe_streaming_bench.sh  thinkflow_swap_rehearsal.sh
(+15 files in other folders)
